## GPareto 1.1.5

## change / GPareto 1.1.5
  * update package vignette to match more the JSS paper (to be continued)

## GPareto 1.1.4

## change / GPareto 1.1.3
  * support for discrete optimization in easyGParetoptim
  * correct PF not taken into account in plotSymDevFun
  * initialize nintegpoints with plot_uncertainty

## GPareto 1.1.3

## change / GPareto 1.1.1
 * add reference to JSS paper
 * fix GParetoptim when there is only one nondominated solution

## GPareto 1.1.2

## change / GPareto 1.1.1
  * vectorized crit_EHI thanks to David Gaudrie
  * vectorized checkPredict function, with additional 'none' option
  * checkPredict new default is "euclidean" for speed
  * update vignette for various edits and update of fancyvrb.sty with xcolor 

## GPareto 1.1.1

## change / GPareto 1.1.0
  * improve 3D Pareto front representation with rgl
  * no more transpose with predict_kms
  * checkPredict use light option

## change / GPareto 1.0.3
  * easyGParetoptim and GParetoptim now allow noisy objectives, with the noise.var argument
  * resolve inconsistency with integration.points in GParetoptim
  * use faster options of predict.km when possible, predict_kms function to predict on a list of models
  * n.steps.remaining now is an element of crit_control
  * arguments for check_predict only in crit_control for all functions
  * EMI is now computed using the semi-analytical formula for 2 objectives (if the range of objective is small enough, for stability)
  * quietly load KrigInv in the vignette to solve rebuilding issues
  * warnings from genoud are suppressed unless trace is high enough

## change / GPareto 1.0.2
  * update the vignette
  * changes in checkPredict for matrix/vector arithmetics

## change / GPareto 1.0.1
  * new function 'easyGParetoptim', a user-friendly wrapper of the function 'GParetoptim' with arguments as the base optim method