@@ -2,7 +2,7 @@ Package: GPareto
 Type: Package
 Title: Gaussian Processes for Pareto Front Estimation and Optimization
 Version: 1.1.5
-Date: 2020-04-01
+Date: 2021-02-22
 Author: Mickael Binois, Victor Picheny
 Maintainer: Mickael Binois <mickael.binois@inria.fr>
 Description: Gaussian process regression models, a.k.a. Kriging models, are
@@ -29,6 +29,6 @@ Suggests: knitr
 VignetteBuilder: knitr
 LinkingTo: Rcpp
 Repository: CRAN
-URL: http://github.com/mbinois/GPareto
-BugReports: http://github.com/mbinois/GPareto/issues
-RoxygenNote: 7.1.0
+URL: https://github.com/mbinois/GPareto
+BugReports: https://github.com/mbinois/GPareto/issues
+RoxygenNote: 7.1.1
